--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- navigation -->
 <nav>
   <ul>
-    <a href="#"><li>home</li></a>
+    <a href="#"><li>homePage</li></a>
     <a href="#"><li>news</li></a>
     <a href="#"><li>about us</li></a>
     <a href="#"><li>contact</li></a>
