--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="#"><li>news</li></a>
     <a href="#"><li>about us</li></a>
     <a href="#"><li>contact</li></a>
+    <li id="date"></li>
   </ul>
 </nav>
 <main>
@@ -43,6 +44,6 @@
       </footer>
 
 
-
+<script src="script.js"></script>
   </body>
 </html>
